[metadata]
name = oftools
author = Tmaxsoft
author-email = tfsadmin@tmaxsoft.com
summary = Set of tools for the Openframe environment
license = CC4.0-BY-NC-SA
license_files = LICENSE.md
description-file = README.md
home-page = http://pypi.python.org/pypi/oftools
requires-python = >=3.5
classifier = 
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: Other/Proprietary License
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[files]
packages =
    oftools

[entry_points]
console_scripts =
    oftools = oftools.Main:main
